force-app-modified/main/default/objects/holidays__c/holidays__c.object-meta.xml
<CustomObject>
    <label>חגים</label>
    <nameField>
        <label>שם חגים</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>חגים</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>