force-app-modified/main/default/objects/holidays__c/fields/ErevPesach1__c.field-meta.xml
<CustomField>
    <fullName>ErevPesach1__c</fullName>
    <label>ערב פסח 1</label>
    <type>Date</type>
</CustomField>