force-app-modified/main/default/objects/holidays__c/fields/ErevPesach2__c.field-meta.xml
<CustomField>
    <fullName>ErevPesach2__c</fullName>
    <label>ערב פסח 2</label>
    <type>Date</type>
</CustomField>