force-app-modified/main/default/objects/holidays__c/fields/ErevSukot1__c.field-meta.xml
<CustomField>
    <fullName>ErevSukot1__c</fullName>
    <label>ערב סוכות 1</label>
    <type>Date</type>
</CustomField>