force-app-modified/main/default/objects/holidays__c/fields/ErevSukot2__c.field-meta.xml
<CustomField>
    <fullName>ErevSukot2__c</fullName>
    <label>ערב סוכות 2</label>
    <type>Date</type>
</CustomField>