force-app-modified/main/default/objects/holidays__c/fields/Pesach2__c.field-meta.xml
<CustomField>
    <fullName>Pesach2__c</fullName>
    <label>חג פסח 2</label>
    <type>Date</type>
</CustomField>