force-app-modified/main/default/objects/holidays__c/fields/Purim__c.field-meta.xml
<CustomField>
    <fullName>Purim__c</fullName>
    <label>פורים</label>
    <type>Date</type>
</CustomField>