force-app-modified/main/default/objects/holidays__c/fields/RoshHashana2__c.field-meta.xml
<CustomField>
    <fullName>RoshHashana2__c</fullName>
    <label>ראש השנה 2</label>
    <type>Date</type>
</CustomField>