force-app-modified/main/default/objects/holidays__c/fields/Shavuot__c.field-meta.xml
<CustomField>
    <fullName>Shavuot__c</fullName>
    <label>שבועות</label>
    <type>Date</type>
</CustomField>